added sklearn accuracy metric to the code

--- a/scripts/iceberg_ship_classif_modif.ipynb
+++ b/scripts/iceberg_ship_classif_modif.ipynb
@@ -13478,7 +13478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13494,7 +13494,7 @@
     "from keras import initializers\n",
     "from keras.optimizers import Adam\n",
     "from keras.callbacks import ModelCheckpoint, Callback, EarlyStopping\n",
-    "from keras.metrics import binary_accuracy"
+    "from keras.metrics import accuracy"
    ]
   },
   {
@@ -13606,7 +13606,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -13804,130 +13804,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_test=gmodel.predict_proba(X_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc = binary_accuracy(y_test.values, predicted_test, threshold=0.5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
+   "execution_count": 148,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor: id=18727, shape=(161,), dtype=float32, numpy=\n",
-       "array([0.5279503 , 0.47204968, 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.5279503 , 0.5279503 , 0.5279503 , 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.47204968, 0.5279503 , 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.47204968, 0.47204968, 0.47204968, 0.47204968,\n",
-       "       0.5279503 , 0.47204968, 0.5279503 , 0.47204968, 0.5279503 ,\n",
-       "       0.5279503 , 0.47204968, 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.47204968, 0.5279503 , 0.5279503 , 0.5279503 , 0.5279503 ,\n",
-       "       0.5279503 , 0.47204968, 0.5279503 , 0.5279503 , 0.5279503 ,\n",
-       "       0.47204968, 0.47204968, 0.5279503 , 0.5279503 , 0.5279503 ,\n",
-       "       0.47204968, 0.47204968, 0.5279503 , 0.5279503 , 0.5279503 ,\n",
-       "       0.5279503 , 0.5279503 , 0.47204968, 0.5279503 , 0.47204968,\n",
-       "       0.5279503 , 0.5279503 , 0.5279503 , 0.47204968, 0.5279503 ,\n",
-       "       0.47204968, 0.5279503 , 0.5279503 , 0.47204968, 0.5279503 ,\n",
-       "       0.5279503 , 0.47204968, 0.47204968, 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.5279503 , 0.5279503 , 0.47204968, 0.5279503 ,\n",
-       "       0.5279503 , 0.5279503 , 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.5279503 , 0.5279503 , 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.5279503 , 0.47204968, 0.5279503 , 0.5279503 , 0.47204968,\n",
-       "       0.5279503 , 0.47204968, 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.47204968, 0.5279503 , 0.47204968, 0.47204968, 0.5279503 ,\n",
-       "       0.47204968, 0.47204968, 0.47204968, 0.47204968, 0.47204968,\n",
-       "       0.5279503 , 0.47204968, 0.47204968, 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.5279503 , 0.47204968, 0.47204968, 0.5279503 ,\n",
-       "       0.47204968, 0.47204968, 0.5279503 , 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.5279503 , 0.47204968, 0.47204968, 0.5279503 ,\n",
-       "       0.5279503 , 0.5279503 , 0.5279503 , 0.47204968, 0.47204968,\n",
-       "       0.5279503 , 0.5279503 , 0.47204968, 0.47204968, 0.5279503 ,\n",
-       "       0.47204968, 0.5279503 , 0.47204968, 0.5279503 , 0.5279503 ,\n",
-       "       0.47204968, 0.47204968, 0.5279503 , 0.5279503 , 0.47204968,\n",
-       "       0.47204968, 0.5279503 , 0.5279503 , 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.47204968, 0.47204968, 0.47204968, 0.47204968,\n",
-       "       0.47204968, 0.5279503 , 0.5279503 , 0.47204968, 0.5279503 ,\n",
-       "       0.47204968], dtype=float32)>"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iceberg detection accuracy: \n",
+      "[100. 100.   0.   0.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0.\n",
+      " 100. 100.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
+      "   0.   0.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
+      "   0.   0. 100.   0. 100.   0. 100. 100. 100.   0. 100.   0. 100. 100.\n",
+      " 100. 100. 100. 100. 100. 100. 100.   0. 100. 100. 100. 100. 100. 100.\n",
+      " 100. 100.   0. 100. 100. 100.   0. 100. 100. 100. 100. 100. 100.   0.\n",
+      " 100. 100. 100.   0. 100.   0.   0. 100. 100. 100.   0. 100. 100. 100.\n",
+      " 100. 100. 100. 100.   0.   0. 100.]\n"
+     ]
     }
    ],
    "source": [
-    "acc"
+    "predicted_test=gmodel.predict_proba(X_test)\n",
+    "acc = binary_accuracy(y_test.values, predicted_test, threshold=0.5)\n",
+    "print(f'Iceberg detection accuracy: \\n{acc*100}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Using sklearn library to calculate prediction accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 146,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iceberg detection accuracy: 83.85 %\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "y_test_transf = np.reshape(y_test.values, y_test.shape[0])\n",
+    "\n",
+    "y_pred = np.reshape(predicted_test, y_test.shape[0])\n",
+    "y_pred = np.array([int(round(x)) for x in y_pred])\n",
+    "\n",
+    "acc_sk = accuracy_score(y_test_transf, y_pred)\n",
+    "print(f'Iceberg detection accuracy: {round(acc_sk*100, 2)} %')"
+   ]
   }
  ],
  "metadata": {
