--- a/scripts/iceberg_ship_classif_modif.ipynb
+++ b/scripts/iceberg_ship_classif_modif.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,9 +88,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -6808,9 +6806,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -13478,9 +13474,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#Import Keras.\n",
     "from matplotlib import pyplot\n",
@@ -13499,7 +13503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13606,7 +13610,7 @@
    "cell_type": "code",
    "execution_count": 47,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -13732,13 +13736,7 @@
       "1082/1082 [==============================] - 38s 35ms/step - loss: 0.2878 - accuracy: 0.8715 - val_loss: 0.3229 - val_accuracy: 0.8532\n",
       "Epoch 34/50\n",
       "1082/1082 [==============================] - 41s 38ms/step - loss: 0.2393 - accuracy: 0.9002 - val_loss: 0.3057 - val_accuracy: 0.8753\n",
-      "Epoch 35/50\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 35/50\n",
       "1082/1082 [==============================] - 41s 38ms/step - loss: 0.2672 - accuracy: 0.8826 - val_loss: 0.3140 - val_accuracy: 0.8809\n",
       "Epoch 36/50\n",
       "1082/1082 [==============================] - 37s 34ms/step - loss: 0.2619 - accuracy: 0.8697 - val_loss: 0.3360 - val_accuracy: 0.8698\n",
@@ -13775,16 +13773,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "361/361 [==============================] - 3s 8ms/step\n",
-      "Test loss: 0.3056577816399181\n",
-      "Test accuracy: 0.8753462433815002\n"
+     "ename": "NameError",
+     "evalue": "name 'gmodel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-491e9fe7e5ac>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mload_weights\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mscore\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mevaluate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_valid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Test loss:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Test accuracy:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mscore\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gmodel' is not defined"
      ]
     }
    ],
@@ -13804,32 +13806,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 1,
    "metadata": {
-    "scrolled": true
+    "collapsed": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Iceberg detection accuracy: \n",
-      "[100. 100.   0.   0.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
-      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
-      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0. 100.\n",
-      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0.\n",
-      " 100. 100.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
-      "   0.   0.   0. 100. 100. 100. 100. 100. 100. 100. 100. 100.   0. 100.\n",
-      " 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100. 100.\n",
-      "   0.   0. 100.   0. 100.   0. 100. 100. 100.   0. 100.   0. 100. 100.\n",
-      " 100. 100. 100. 100. 100. 100. 100.   0. 100. 100. 100. 100. 100. 100.\n",
-      " 100. 100.   0. 100. 100. 100.   0. 100. 100. 100. 100. 100. 100.   0.\n",
-      " 100. 100. 100.   0. 100.   0.   0. 100. 100. 100.   0. 100. 100. 100.\n",
-      " 100. 100. 100. 100.   0.   0. 100.]\n"
+     "ename": "NameError",
+     "evalue": "name 'gmodel' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-0b7331ce8368>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Not working the way I wanted\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mpredicted_test\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_proba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0macc\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbinary_accuracy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0my_test\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mpredicted_test\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mthreshold\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.5\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Iceberg detection accuracy: \\n{acc*100}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'gmodel' is not defined"
      ]
     }
    ],
    "source": [
+    "# Not working the way I wanted\n",
+    "# shpuld be discussed with Vasco\n",
     "predicted_test=gmodel.predict_proba(X_test)\n",
     "acc = binary_accuracy(y_test.values, predicted_test, threshold=0.5)\n",
     "print(f'Iceberg detection accuracy: \\n{acc*100}')"
