data split modification

--- a/scripts/iceberg_ship_classif_modif.ipynb
+++ b/scripts/iceberg_ship_classif_modif.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "(1604, 5)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,8 @@
     "X_band_2=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_2\"]])\n",
     "\n",
     "data = np.concatenate([X_band_1[:, :, :, np.newaxis], X_band_2[:, :, :, np.newaxis],\n",
-    "                          ((X_band_1+X_band_2)/2)[:, :, :, np.newaxis]], axis=-1)"
+    "                          ((X_band_1+X_band_2)/2)[:, :, :, np.newaxis]], axis=-1)\n",
+    "target=train['is_iceberg']"
    ]
   },
   {
@@ -13575,15 +13576,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "original implementation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "target=train['is_iceberg']\n",
     "X_train_cv, X_valid, y_train_cv, y_valid = train_test_split(X_train, target_train, random_state=1, train_size=0.75)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 45,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "modified split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data split: \n",
+      "Train: \t   1082 \n",
+      "Validation: 361 \n",
+      "Test: \t    161\n"
+     ]
+    }
+   ],
    "source": [
     "# Define the data split strategy\n",
     "def data_split(data, target, train_size, test_size): \n",
@@ -13603,7 +13629,8 @@
     "train_size = 0.90\n",
     "valid_size = 0.25\n",
     "\n",
-    "X_train_cv, X_valid, X_test, y_train_cv, y_valid, y_test = data_split(data, target, train_size, valid_size )"
+    "X_train_cv, X_valid, X_test, y_train_cv, y_valid, y_test = data_split(data, target, train_size, valid_size )\n",
+    "print(f'data split: \\nTrain: \\t   {X_train_cv.shape[0]} \\nValidation: {X_valid.shape[0]} \\nTest: \\t    {X_test.shape[0]}')"
    ]
   },
   {
@@ -13825,10 +13852,10 @@
    ],
    "source": [
     "# Not working the way I wanted\n",
-    "# shpuld be discussed with Vasco\n",
+    "# should be discussed with Vasco\n",
     "predicted_test=gmodel.predict_proba(X_test)\n",
     "acc = binary_accuracy(y_test.values, predicted_test, threshold=0.5)\n",
-    "print(f'Iceberg detection accuracy: \\n{acc*100}')"
+    "print(f'Iceberg detection accuracy: \\n{acc}')"
    ]
   },
   {
