--- a/scripts/iceberg_ship_classif_modif.ipynb
+++ b/scripts/iceberg_ship_classif_modif.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,21 +52,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Index(['id', 'band_1', 'band_2', 'inc_angle', 'is_iceberg'], dtype='object')\n",
-      "(1604, 5)\n"
+      "(1604, 5)\n",
+      "is_iceberg\n",
+      "0    851\n",
+      "1    753\n",
+      "dtype: int64\n"
      ]
     }
    ],
    "source": [
     "print(train.columns)\n",
-    "print(train.shape)"
+    "print(train.shape)\n",
+    "print(train.groupby('is_iceberg').size())"
    ]
   },
   {
@@ -131,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -146,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -162,6 +169,55 @@
     "                          X_band_3[:, :, :, np.newaxis]], axis=-1)\n",
     "\n",
     "target=train['is_iceberg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1604, 75, 75)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_band_1[[:, :, :, np.newaxis]].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "target=train['is_iceberg']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(target)"
    ]
   },
   {
