Adapting the code for 2band images

--- a/scripts/iceberg_ship_classif_modif.ipynb
+++ b/scripts/iceberg_ship_classif_modif.ipynb
@@ -153,14 +153,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "# modify the data preprocessing\n",
-    "#Create 3 bands having HH, HV and avg of both\n",
+    "#Create 3 bands having HH, HV and incidence angle\n",
     "X_band_1=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_1\"]])\n",
     "X_band_2=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_2\"]])\n",
     "X_band_3=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"inc_angle\"]])\n",
@@ -169,55 +169,6 @@
     "                          X_band_3[:, :, :, np.newaxis]], axis=-1)\n",
     "\n",
     "target=train['is_iceberg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1604, 75, 75)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X_band_1[[:, :, :, np.newaxis]].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target=train['is_iceberg']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "pandas.core.series.Series"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "type(target)"
    ]
   },
   {
