First results for deep_ship_nn dataset

--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "scrolled": false
    },
@@ -670,8 +670,38 @@
       "Epoch 5/50\n",
       "5362/5362 [==============================] - 142s 27ms/step - loss: 0.3881 - accuracy: 0.8493 - val_loss: 0.3545 - val_accuracy: 0.8688\n",
       "Epoch 6/50\n",
-      "2544/5362 [=============>................] - ETA: 1:12 - loss: 0.3723 - accuracy: 0.8632"
+      "5362/5362 [==============================] - 152s 28ms/step - loss: 0.3552 - accuracy: 0.8672 - val_loss: 0.3649 - val_accuracy: 0.8732\n",
+      "Epoch 7/50\n",
+      "5362/5362 [==============================] - 166s 31ms/step - loss: 0.3321 - accuracy: 0.8782 - val_loss: 0.3294 - val_accuracy: 0.8762\n",
+      "Epoch 8/50\n",
+      "5362/5362 [==============================] - 159s 30ms/step - loss: 0.3356 - accuracy: 0.8769 - val_loss: 0.2898 - val_accuracy: 0.9053\n",
+      "Epoch 9/50\n",
+      "5362/5362 [==============================] - 149s 28ms/step - loss: 0.3073 - accuracy: 0.8853 - val_loss: 0.3359 - val_accuracy: 0.8784\n",
+      "Epoch 10/50\n",
+      "5362/5362 [==============================] - 144s 27ms/step - loss: 0.3071 - accuracy: 0.8833 - val_loss: 0.2907 - val_accuracy: 0.8949\n",
+      "Epoch 11/50\n",
+      "5362/5362 [==============================] - 155s 29ms/step - loss: 0.2720 - accuracy: 0.9066 - val_loss: 0.2522 - val_accuracy: 0.9060\n",
+      "Epoch 12/50\n",
+      "5362/5362 [==============================] - 160s 30ms/step - loss: 0.2695 - accuracy: 0.9051 - val_loss: 0.2865 - val_accuracy: 0.8941\n",
+      "Epoch 13/50\n",
+      "5362/5362 [==============================] - 164s 31ms/step - loss: 0.2738 - accuracy: 0.9021 - val_loss: 0.3463 - val_accuracy: 0.8717\n",
+      "Epoch 14/50\n",
+      "5362/5362 [==============================] - 153s 29ms/step - loss: 0.2563 - accuracy: 0.9071 - val_loss: 0.3381 - val_accuracy: 0.8665\n",
+      "Epoch 15/50\n",
+      "5362/5362 [==============================] - 154s 29ms/step - loss: 0.2606 - accuracy: 0.9064 - val_loss: 0.3087 - val_accuracy: 0.8986\n",
+      "Epoch 16/50\n",
+      "5362/5362 [==============================] - 158s 29ms/step - loss: 0.2737 - accuracy: 0.8971 - val_loss: 0.2705 - val_accuracy: 0.8949\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.callbacks.History at 0x1cf54d09948>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -687,9 +717,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1341/1341 [==============================] - 10s 7ms/step\n",
+      "Test loss: 0.2521847502830578\n",
+      "Test accuracy: 0.9060402512550354\n"
+     ]
+    }
+   ],
    "source": [
     "# model validation evaluation\n",
     "gmodel.load_weights(file_path)\n",
@@ -700,9 +740,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2873/2873 [==============================] - 22s 7ms/step\n",
+      "Test loss: 0.24794988447765917\n",
+      "Test accuracy: 0.9133310317993164\n"
+     ]
+    }
+   ],
    "source": [
     "# model test evaluation\n",
     "score = gmodel.evaluate(X_test, y_test, verbose=1)\n",
