Results for deep_ship_nn balanced dataset

--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -855,14 +855,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 704/1197 [================>.............] - ETA: 4s"
+      "1197/1197 [==============================] - 10s 8ms/step\n",
+      "                precision    recall  f1-score   support\n",
+      "\n",
+      "random noise 0       0.95      0.98      0.97       399\n",
+      "   ship-like 1       0.94      0.83      0.88       399\n",
+      "        ship 2       0.88      0.95      0.91       399\n",
+      "\n",
+      "      accuracy                           0.92      1197\n",
+      "     macro avg       0.92      0.92      0.92      1197\n",
+      "  weighted avg       0.92      0.92      0.92      1197\n",
+      "\n"
      ]
     }
    ],
