Fixed Confusion matrix report

--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +872,11 @@
       "      accuracy                           0.92      1197\n",
       "     macro avg       0.92      0.92      0.92      1197\n",
       "  weighted avg       0.92      0.92      0.92      1197\n",
-      "\n"
+      "\n",
+      "Confusion matrix \n",
+      " [[392   5   2]\n",
+      " [ 14 333  52]\n",
+      " [  5  16 378]]\n"
      ]
     }
    ],
@@ -882,7 +886,8 @@
     "y_pred_bool = np.argmax(y_pred, axis=1)\n",
     "labels = np.array(['random noise 0', 'ship-like 1', 'ship 2'])\n",
     "\n",
-    "print(classification_report(y_test, y_pred_bool, target_names=labels))"
+    "print(classification_report(y_test, y_pred_bool, target_names=labels))\n",
+    "print('Confusion matrix \\n', confusion_matrix(y_test, y_pred_bool))"
    ]
   },
   {
