--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -560,7 +560,7 @@
     "#file_path = \".model_weights.hdf5\"\n",
     "#file_path = \".model_weights_inc_angle_as_band.hdf5\"\n",
     "file_path = \".model_weights_very_deep_learn_balanced_ds.hdf5\"\n",
-    "callbacks = get_callbacks(filepath=file_path, patience=15) # increased the \"patience\""
+    "callbacks = get_callbacks(filepath=file_path, patience=10) # increased the \"patience\""
    ]
   },
   {
@@ -613,7 +613,7 @@
    "cell_type": "code",
    "execution_count": 99,
    "metadata": {
-    "scrolled": false
+    "collapsed": true
    },
    "outputs": [
     {
@@ -888,6 +888,27 @@
     "\n",
     "print(classification_report(y_test, y_pred_bool, target_names=labels))\n",
     "print('Confusion matrix \\n', confusion_matrix(y_test, y_pred_bool))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'Sequential' object has no attribute 'predict_class'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-140-c49648459d41>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mincorrects\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnonzero\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mgmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpredict_class\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0my_test\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'Sequential' object has no attribute 'predict_class'"
+     ]
+    }
+   ],
+   "source": [
+    "incorrects = np.nonzero(gmodel.predict_class(X_test).reshape((-1,)) != y_test)"
    ]
   },
   {
