Results and discussion

--- a/scripts/under_development.ipynb
+++ b/scripts/under_development.ipynb
@@ -103,6 +103,42 @@
     "file_path = \".model_weights_very_deep_learn_balanced_ds.hdf5\"\n",
     "callbacks = get_callbacks(filepath=file_path, patience=10) # increased the \"patience\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the indexes of the images being wrongly classified\n",
+    "#incorrects = np.argwhere(y_pred_bool != y_test)\n",
+    "incorrects = np.nonzero(y_pred_bool != y_test)[0]\n",
+    "incorrects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# visualize image samples \n",
+    "\n",
+    "plt.figure()\n",
+    "\n",
+    "#subplot(r,c) provide the no. of rows and columns\n",
+    "f, axarr = plt.subplots(1,4, figsize=(15, 15)) \n",
+    "\n",
+    "# use the created array to output your multiple images. In this case I have stacked 4 images vertically\n",
+    "axarr[0].imshow(ship_positive_75[3,:,:], cmap=\"gray\")\n",
+    "axarr[0].set_title('ship')\n",
+    "axarr[1].imshow(ship_positive_75[54,:,:], cmap=\"gray\")  \n",
+    "axarr[1].set_title('ship')\n",
+    "axarr[2].imshow(ship_positive_75[86,:,:], cmap=\"gray\")\n",
+    "axarr[2].set_title('ship-like')\n",
+    "axarr[3].imshow(ship_positive_75[1119,:,:], cmap=\"gray\") \n",
+    "axarr[3].set_title('random noise')"
+   ]
   }
  ],
  "metadata": {
