--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "['false_positives.json', 'ship_positives.json', 'true_negatives.json']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -251,7 +251,7 @@
        "Text(0.5, 1.0, 'random noise')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
        "Text(0.5, 1.0, 'random noise')"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -383,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "0  1596       1596          1596"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -566,9 +566,9 @@
     "    return [es, msave]\n",
     "\n",
     "#file_path = \".model_weights.hdf5\"\n",
-    "#file_path = \".model_weights_inc_angle_as_band.hdf5\"\n",
-    "file_path = \".model_weights_very_deep_learn_balanced_ds.hdf5\"\n",
-    "callbacks = get_callbacks(filepath=file_path, patience=10) # increased the \"patience\""
+    "#file_path = \".model_weights_very_deep_learn_balanced_ds.hdf5\"\n",
+    "weigth_path = join(PATH, 'model_weights', '.model_weights_very_deep_learn_balanced_ds.hdf5')\n",
+    "callbacks = get_callbacks(filepath=weigth_path, patience=10) # increased the \"patience\""
    ]
   },
   {
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -620,9 +620,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -812,7 +810,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "719/719 [==============================] - 6s 8ms/step\n",
+      "719/719 [==============================] - 5s 8ms/step\n",
       "Test loss: 0.21497937660762764\n",
       "Test accuracy: 0.9207231998443604\n"
      ]
@@ -820,7 +818,7 @@
    ],
    "source": [
     "# model validation evaluation\n",
-    "gmodel.load_weights(file_path)\n",
+    "gmodel.load_weights(weigth_path)\n",
     "score = gmodel.evaluate(X_valid, y_valid, verbose=1)\n",
     "print('Test loss:', score[0])\n",
     "print('Test accuracy:', score[1])"
@@ -861,7 +859,7 @@
    "source": [
     "##### Classification results and discussion \n",
     "\n",
-    "As it was expected from the explanatory analysis, the images having random noise (negative class) are described by a random distribution of radar backscattering aver all the image's scene and were significantly different from the ships and ship-likes, thus, this class was the easiest for the model to classify (recall value eq. 0.98). Contrary to that, ship-likes backscattering resembles a lot the ships. The result shows that ship class was mainly misclassifieds as ship-likes as was expected (see the confusion matrix), but still having a very high **true positive rate** (same as recall): **0.95**. From the confusion matrix we can observe also that the ship-like class has the highest misclasivied rate and is being misclassified mostly as ship. **Overall Classification Accuracy is 0.92**."
+    "As it was expected from the explanatory analysis, the images having random noise (negative class) are described by a random distribution of radar backscattering aver all the image's scene and were significantly different from the ships and ship-likes, thus, this class was the easiest for the model to classify (recall value eq. 0.98). Contrary to that, ship-likes backscattering resembles a lot the ships. The result shows that ship class was mainly misclassifieds as ship-likes as was expected (see the confusion matrix), but still having a very high **True Positive Rate** (same as recall): **0.95**. From the confusion matrix we can observe also that the ship-like class has the highest misclasivied rate and is being misclassified mostly as ship, casueing for relatively high **Fasle Positive Rate: 0.12** (`FP/(FP+TN)`). **Overall Classification Accuracy is 0.92**."
    ]
   },
   {
