--- a/scripts/Dechesne_under_development.ipynb
+++ b/scripts/Dechesne_under_development.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 195,
    "metadata": {
     "scrolled": true
    },
@@ -172,7 +172,8 @@
     "data = np.concatenate([ship_positive_80[:, :, :, np.newaxis], ship_positive_angle[:, :, :, np.newaxis]], axis=-1)\n",
     "\n",
     "#data = ship_positive_80\n",
-    "target = np.array([im_resize(image, interpolation=cv2.INTER_NEAREST) for image in ship_positive_target])"
+    "target = np.array([im_resize(image, interpolation=cv2.INTER_NEAREST) for image in ship_positive_target])\n",
+    "target = np.array(target[:,:,:,np.newaxis])"
    ]
   },
   {
@@ -227,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 196,
    "metadata": {
     "scrolled": true
    },
@@ -238,7 +239,7 @@
        "Text(0.5, 1.0, 'radar data')"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 196,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -474,6 +475,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1596, 80, 80, 1)\n",
+      "(1596, 80, 80, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(target.shape)\n",
+    "print(data.shape)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -482,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 200,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -595,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
@@ -604,66 +624,63 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_7\"\n",
+      "Model: \"sequential_8\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_37 (Conv2D)           (None, 80, 80, 128)       2432      \n",
+      "conv2d_48 (Conv2D)           (None, 80, 80, 128)       2432      \n",
       "_________________________________________________________________\n",
-      "conv2d_38 (Conv2D)           (None, 80, 80, 256)       295168    \n",
+      "conv2d_49 (Conv2D)           (None, 80, 80, 256)       295168    \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_7 (MaxPooling2 (None, 40, 40, 256)       0         \n",
+      "max_pooling2d_9 (MaxPooling2 (None, 40, 40, 256)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_13 (Dropout)         (None, 40, 40, 256)       0         \n",
+      "dropout_17 (Dropout)         (None, 40, 40, 256)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_39 (Conv2D)           (None, 40, 40, 256)       590080    \n",
+      "conv2d_50 (Conv2D)           (None, 40, 40, 256)       590080    \n",
       "_________________________________________________________________\n",
-      "conv2d_40 (Conv2D)           (None, 40, 40, 512)       1180160   \n",
+      "conv2d_51 (Conv2D)           (None, 40, 40, 512)       1180160   \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_8 (MaxPooling2 (None, 20, 20, 512)       0         \n",
+      "max_pooling2d_10 (MaxPooling (None, 20, 20, 512)       0         \n",
       "_________________________________________________________________\n",
-      "dropout_14 (Dropout)         (None, 20, 20, 512)       0         \n",
+      "dropout_18 (Dropout)         (None, 20, 20, 512)       0         \n",
       "_________________________________________________________________\n",
-      "conv2d_41 (Conv2D)           (None, 20, 20, 512)       2359808   \n",
+      "conv2d_52 (Conv2D)           (None, 20, 20, 512)       2359808   \n",
       "_________________________________________________________________\n",
-      "conv2d_42 (Conv2D)           (None, 20, 20, 512)       2359808   \n",
+      "conv2d_53 (Conv2D)           (None, 20, 20, 512)       2359808   \n",
       "_________________________________________________________________\n",
-      "conv2d_43 (Conv2D)           (None, 20, 20, 64)        294976    \n",
+      "conv2d_54 (Conv2D)           (None, 20, 20, 64)        294976    \n",
       "_________________________________________________________________\n",
-      "conv2d_44 (Conv2D)           (None, 20, 20, 64)        36928     \n",
+      "conv2d_55 (Conv2D)           (None, 20, 20, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "up_sampling2d_7 (UpSampling2 (None, 40, 40, 64)        0         \n",
+      "up_sampling2d_9 (UpSampling2 (None, 40, 40, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_15 (Dropout)         (None, 40, 40, 64)        0         \n",
+      "dropout_19 (Dropout)         (None, 40, 40, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_45 (Conv2D)           (None, 40, 40, 64)        36928     \n",
+      "conv2d_56 (Conv2D)           (None, 40, 40, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "conv2d_46 (Conv2D)           (None, 40, 40, 64)        36928     \n",
+      "conv2d_57 (Conv2D)           (None, 40, 40, 64)        36928     \n",
       "_________________________________________________________________\n",
-      "up_sampling2d_8 (UpSampling2 (None, 80, 80, 64)        0         \n",
+      "up_sampling2d_10 (UpSampling (None, 80, 80, 64)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_16 (Dropout)         (None, 80, 80, 64)        0         \n",
+      "dropout_20 (Dropout)         (None, 80, 80, 64)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_47 (Conv2D)           (None, 80, 80, 1)         577       \n",
+      "conv2d_58 (Conv2D)           (None, 80, 80, 1)         577       \n",
       "=================================================================\n",
       "Total params: 7,193,793\n",
       "Trainable params: 7,193,793\n",
       "Non-trainable params: 0\n",
-      "_________________________________________________________________\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Error when checking target: expected conv2d_47 to have 4 dimensions, but got array with shape (957, 80, 80)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-191-fe190dc6965b>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m           \u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m           \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX_valid\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0my_valid\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m           callbacks=callbacks)\n\u001b[0m",
-      "\u001b[1;32mc:\\users\\arman\\anaconda3\\envs\\ship_nn\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[0;32m   1152\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1153\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1154\u001b[1;33m             batch_size=batch_size)\n\u001b[0m\u001b[0;32m   1155\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1156\u001b[0m         \u001b[1;31m# Prepare validation data.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\arman\\anaconda3\\envs\\ship_nn\\lib\\site-packages\\keras\\engine\\training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[1;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[0;32m    619\u001b[0m                 \u001b[0mfeed_output_shapes\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    620\u001b[0m                 \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[1;31m# Don't enforce the batch size.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 621\u001b[1;33m                 exception_prefix='target')\n\u001b[0m\u001b[0;32m    622\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    623\u001b[0m             \u001b[1;31m# Generate sample-wise weight values given the `sample_weight` and\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mc:\\users\\arman\\anaconda3\\envs\\ship_nn\\lib\\site-packages\\keras\\engine\\training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[1;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[0;32m    133\u001b[0m                         \u001b[1;34m': expected '\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' to have '\u001b[0m \u001b[1;33m+\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    134\u001b[0m                         \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m \u001b[1;34m' dimensions, but got array '\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 135\u001b[1;33m                         'with shape ' + str(data_shape))\n\u001b[0m\u001b[0;32m    136\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mcheck_batch_axis\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    137\u001b[0m                     \u001b[0mdata_shape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata_shape\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: Error when checking target: expected conv2d_47 to have 4 dimensions, but got array with shape (957, 80, 80)"
+      "_________________________________________________________________\n",
+      "Train on 957 samples, validate on 240 samples\n",
+      "Epoch 1/50\n",
+      "957/957 [==============================] - 1190s 1s/step - loss: 0.9778 - accuracy: 0.9346 - val_loss: 0.5066 - val_accuracy: 0.9672\n",
+      "Epoch 2/50\n",
+      "957/957 [==============================] - 1160s 1s/step - loss: 0.5294 - accuracy: 0.9657 - val_loss: 0.5066 - val_accuracy: 0.9672\n",
+      "Epoch 3/50\n",
+      "957/957 [==============================] - 1152s 1s/step - loss: 0.5294 - accuracy: 0.9657 - val_loss: 0.5066 - val_accuracy: 0.9672\n",
+      "Epoch 4/50\n",
+      "957/957 [==============================] - 1175s 1s/step - loss: 0.5294 - accuracy: 0.9657 - val_loss: 0.5066 - val_accuracy: 0.9672\n",
+      "Epoch 5/50\n",
+      "912/957 [===========================>..] - ETA: 54s - loss: 0.5285 - accuracy: 0.9657 "
      ]
     }
    ],
