Made utils.py file

--- a/scripts/Dechesne_under_development.ipynb
+++ b/scripts/Dechesne_under_development.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,13 @@
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "import pylab\n",
     "import cv2\n",
+    "from utils import bbox_draw\n",
     "%matplotlib inline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -55,7 +56,7 @@
        "['false_positives.json', 'ship_positives.json', 'true_negatives.json']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -112,7 +113,7 @@
        "dict_keys(['id', 'sensor', 'resolution', 'fullname', 'polarisation', 'incidenceangle', 'row', 'column', 'longitude', 'latitude', 'stats', 'R', 'nearest', 'pixelsize', 'patchfu', 'patchgt', 'windowfu', 'windowgt', 'validais', 'ais', 'aux'])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +162,7 @@
     "\n",
     "# define function form image re-sizing\n",
     "dsize = (80, 80)\n",
-    "def im_resize(img,interpolation):\n",
+    "def im_resize(img, dsize, interpolation):\n",
     "    resized = cv2.resize(img, dsize=dsize, interpolation=interpolation) #cv2.INTER_CUBIC #cv2.INTER_NEAREST\n",
     "    return resized"
    ]
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -191,19 +192,19 @@
     "ship_positive_target = data_extract(ship_positives, 'windowgt')\n",
     "\n",
     "# Resize the images\n",
-    "ship_positive_80 = np.array([im_resize(image, interpolation=cv2.INTER_NEAREST) for image in ship_positive_data])\n",
-    "ship_positive_angle = np.array([im_resize(image, interpolation=cv2.INTER_NEAREST) for image in ship_positive_angle])\n",
+    "ship_positive_80 = np.array([im_resize(image, dsize, interpolation=cv2.INTER_NEAREST) for image in ship_positive_data])\n",
+    "ship_positive_angle = np.array([im_resize(image, dsize, interpolation=cv2.INTER_NEAREST) for image in ship_positive_angle])\n",
     "# combine data and angle into 2 band images\n",
     "data = np.concatenate([ship_positive_80[:, :, :, np.newaxis], ship_positive_angle[:, :, :, np.newaxis]], axis=-1)\n",
     "\n",
-    "target = np.array([im_resize(image, interpolation=cv2.INTER_NEAREST) for image in ship_positive_target])\n",
+    "target = np.array([im_resize(image, dsize, interpolation=cv2.INTER_NEAREST) for image in ship_positive_target])\n",
     "# add one more dimention to match with the data array dimentions\n",
     "target = np.array(target[:,:,:,np.newaxis])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -240,7 +241,7 @@
        "Text(0.5, 1.0, 'radar data')"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -284,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +294,7 @@
        "Text(0.5, 1.0, 'target data')"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -398,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -461,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,9 +480,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "#Import Keras.\n",
     "from matplotlib import pyplot\n",
@@ -502,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 35,
    "metadata": {
     "scrolled": true
    },
@@ -576,7 +585,7 @@
    "cell_type": "code",
    "execution_count": 17,
    "metadata": {
-    "collapsed": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -712,8 +721,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "# model validation evaluation\n",
@@ -748,15 +759,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "399/399 [==============================] - 131s 327ms/step\n",
-      "399/399 [==============================] - 135s 339ms/step\n"
+      "399/399 [==============================] - 155s 387ms/step\n",
+      "399/399 [==============================] - 151s 379ms/step\n"
      ]
     }
    ],
@@ -783,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -808,93 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# define functions for vizualization \n",
-    "def multiple_im_plot(no_image):\n",
-    "    \n",
-    "    plt.figure()\n",
-    "\n",
-    "    #subplot(r,c) provide the no. of rows and columns\n",
-    "    f, axarr = plt.subplots(2,2, figsize=(10, 10)) \n",
-    "\n",
-    "    # use the created array to output your multiple images. In this case I have stacked 4 images vertically\n",
-    "    axarr[0,0].imshow(X_test_value[no_image])\n",
-    "    axarr[0,0].set_title('actual data')\n",
-    "    axarr[0,1].imshow(y_pred_value[no_image])  \n",
-    "    axarr[0,1].set_title('predicted data')\n",
-    "    axarr[1,0].imshow(y_test_label[no_image], cmap=\"gray\")\n",
-    "    axarr[1,0].set_title('actual labels')\n",
-    "    axarr[1,1].imshow(y_pred_label[no_image], cmap=\"gray\") \n",
-    "    axarr[1,1].set_title('predicted labels')\n",
-    "    \n",
-    "def bbox_draw(im_array_label, im_array_vals=None, dsize = dsize):\n",
-    "    '''Draw rectangle box around the detected ship''' \n",
-    "    \n",
-    "    # resize the images to a given sizes\n",
-    "    y_pred_label_resized =  im_resize(im_array_label, interpolation=cv2.INTER_NEAREST)\n",
-    "    \n",
-    "    # get figure bounding parameters \n",
-    "    indx = np.argwhere(y_pred_label_resized==1)\n",
-    "    up_b    = indx[:,0].min()\n",
-    "    down_b  = indx[:,0].max()\n",
-    "    left_b  = indx[:,1].min()\n",
-    "    right_b = indx[:,1].max()\n",
-    "\n",
-    "    # set up the bbox corners coordinate with 1 pixel out\n",
-    "    upper_left = (left_b-0.75,up_b-0.75)\n",
-    "    width = right_b-left_b+1.5\n",
-    "    height = down_b-up_b+1.5\n",
-    "    \n",
-    "    if im_array_vals is not None:\n",
-    "        # resize the images to a given sizes\n",
-    "        y_pred_resized = im_resize(im_array_vals, interpolation=cv2.INTER_NEAREST)\n",
-    "        \n",
-    "        # Configure figure ploting\n",
-    "        plt.figure()\n",
-    "\n",
-    "        #subplot(r,c) provide the no. of rows and columns\n",
-    "        f, ax = plt.subplots(1,2, figsize = (10,10)) \n",
-    "        ax[0].imshow(y_pred_resized,cmap=\"gray\")\n",
-    "        ax[0].set_title('bbox around the predicted ship')\n",
-    "        ax[1].imshow(y_pred_label_resized,cmap=\"gray\")\n",
-    "        ax[1].set_title('bbox around the classified ship')\n",
-    "\n",
-    "        # Create a Rectangle patch\n",
-    "        #Rectangle((left,upper),width,height))\n",
-    "        rect = patches.Rectangle(\n",
-    "            upper_left,\n",
-    "            width,height,\n",
-    "            linewidth=0.7,edgecolor='r',facecolor='none')\n",
-    "        # Add the patch to the Axes\n",
-    "        ax[0].add_patch(rect)\n",
-    "        #ax[1].add_patch(rect)\n",
-    "        plt.show()\n",
-    "    else:\n",
-    "        # Configure figure ploting\n",
-    "        plt.figure()\n",
-    "\n",
-    "        #subplot(r,c) provide the no. of rows and columns\n",
-    "        f, ax = plt.subplots(1, figsize=(5,5)) \n",
-    "        ax.imshow(y_pred_label_resized,cmap=\"gray\")\n",
-    "        ax.set_title('bbox around the predicted ship')\n",
-    "\n",
-    "        # Create a Rectangle patch\n",
-    "        #Rectangle((left,upper),width,height))\n",
-    "        rect = patches.Rectangle(\n",
-    "            upper_left,\n",
-    "            width,height,\n",
-    "            linewidth=0.7,edgecolor='r',facecolor='none')\n",
-    "        # Add the patch to the Axes\n",
-    "        ax.add_patch(rect)\n",
-    "        plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -920,14 +845,34 @@
     }
    ],
    "source": [
+    "# define functions for vizualization \n",
+    "def multiple_im_plot(no_image):\n",
+    "    \n",
+    "    plt.figure()\n",
+    "\n",
+    "    #subplot(r,c) provide the no. of rows and columns\n",
+    "    f, axarr = plt.subplots(2,2, figsize=(10, 10)) \n",
+    "\n",
+    "    # use the created array to output your multiple images. In this case I have stacked 4 images vertically\n",
+    "    axarr[0,0].imshow(X_test_value[no_image])\n",
+    "    axarr[0,0].set_title('actual data')\n",
+    "    axarr[0,1].imshow(y_pred_value[no_image])  \n",
+    "    axarr[0,1].set_title('predicted data')\n",
+    "    axarr[1,0].imshow(y_test_label[no_image], cmap=\"gray\")\n",
+    "    axarr[1,0].set_title('actual labels')\n",
+    "    axarr[1,1].imshow(y_pred_label[no_image], cmap=\"gray\") \n",
+    "    axarr[1,1].set_title('predicted labels')\n",
+    "    \n",
     "# visualize prediction examples \n",
     "multiple_im_plot(67)   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
-   "metadata": {},
+   "execution_count": 60,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -954,15 +899,8 @@
    "source": [
     "# vizualiza predicted ships with bbox\n",
     "dsize = (80,80)\n",
-    "bbox_draw(y_pred_label[67],y_pred_value[67],  dsize= dsize )"
+    "utils.bbox_draw(y_pred_label[67], y_pred_value[67], dsize)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
