exploring SAR_Ship_complex_background dataset

--- a/scripts/Dechesne_pixel_wise_ship_detection.ipynb
+++ b/scripts/Dechesne_pixel_wise_ship_detection.ipynb
@@ -811,10 +811,10 @@
    "metadata": {},
    "source": [
     "### Visualize the classification outputs \n",
-    "Let's plot some images to compare the `actual data vs predicted data`, and `actual labels vs predicted labels`. One should keep in mind that the images sizes undergone to size transformations.\n",
+    "Let's plot some images to compare the `actual data vs predicted data`, and `actual labels vs predicted labels`. One should keep in mind that the images undergone to size transformation.\n",
     "\n",
     "### Draw bound boxes \n",
-    "The bboxes are created based on binary classification and it will fail if we try to apply on another type of images. Also one should ensure that inputs are 2d_arrays. If we pass also predicted data valies of an image, the function returns bbox around the data values while vizualizing also the prediction labels on another image. However, it will still calculate the bbox parameters from label image."
+    "The bboxes are created based on binary classification and it will fail if we try to apply on another type of images. Also one should ensure that inputs are 2d_arrays. If we pass also predicted data values of an image, the function returns bbox around the data values while vizualizing also the prediction labels on another image. However, it will still calculate the bbox parameters from label image."
    ]
   },
   {
