--- a/scripts/iceberg_ship_classification.ipynb
+++ b/scripts/iceberg_ship_classification.ipynb
@@ -80,19 +80,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Intro about the Data.\n",
+    "### Intro about the Data.\n",
     "\n",
     "Sentinet -1 sat is at about 680 Km above earth. Sending pulses of signals at a particular angle of incidence and then recoding it back. Basically those reflected signals are called backscatter. The data we have been given is backscatter coefficient which is the conventional form of backscatter coefficient given by:\n",
     "\n",
-    "$σo (dB) = βo (dB) + 10log10 [ sin(ip) / sin (ic)] $\n",
+    "$ σo (dB) = βo (dB) + 10log10 [ sin(ip) / sin (ic)] $\n",
     "\n",
     "where\n",
     "1. ip=is angle of incidence for a particular pixel\n",
-    "2. 'ic ' is angle of incidence for center of the image\n",
+    "2. 'ic' is angle of incidence for center of the image\n",
     "3. K =constant.\n",
     "\n",
     "We have been given $σo$ directly in the data. \n",
-    "###Now coming to the features of $σo$\n",
+    "#### Now coming to the features of **σo** (sigma naught)\\\n",
     "Basically σo varies with the surface on which the signal is scattered from. For example, for a particular angle of incidence, it varies like:\n",
     "*             WATER...........           SETTLEMENTS........           AGRICULTURE...........          BARREN........\n",
     "\n",
@@ -103,17 +103,17 @@
     "As you can see, the HH component varies a lot but HV doesn't.\n",
     "**I don't have the data for scatter from ship, but being a metal object, it should vary differently as compared to ice object.**\n",
     "\n",
-    "Now coming to features, for the purpose of this demo code, I am extracting all two bands and taking avg of them as 3rd channel to create a 3-channel RGB equivalent. "
+    "Now coming to features, for the purpose of this demo code, all two bands were included and taking avg of them as 3rd channel to create a 3-channel RGB equivalent. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## original\n",
+    "### original version\n",
     "\n",
-    "#Generate the training data\n",
-    "#Create 3 bands having HH, HV and avg of both\n",
+    "<!-- Generate the training data\n",
+    "Create 3 bands having HH, HV and avg of both -->\n",
     "X_band_1=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_1\"]])\n",
     "X_band_2=np.array([np.array(band).astype(np.float32).reshape(75, 75) for band in train[\"band_2\"]])\n",
     "\n",
@@ -128,17 +128,17 @@
    "source": [
     "## modified\n",
     "\n",
-    "### The band of angle has missing values\n",
+    "#### The band of angle has missing values\n",
     "needs to be filled\n",
     "\n",
-    "As the incidence angle range for IW scanning mode (Interferometric Wide Swath) alters in the range of *29°-46°*, we can replace the missing values with **36.0°**. More information on the Sentinel 1 IW mode can be found [here](https://sentinel.esa.int/web/sentinel/user-guides/sentinel-1-sar/acquisition-modes/interferometric-wide-swath)\n",
+    "The dataset explorative analysis show that a single incidence angle is presented for each ship chip. Thus, we can recover the image whole images with that given value in order to process in the model as another band for training.\n",
     "\n",
-    "The dataset explorative analysis show that a single incidence angle is presented for each ship ship. Thus we should recover the image whole images with that given value in order to process in the model training as another band."
+    "As the incidence angle range for IW scanning mode (Interferometric Wide Swath) alters in the range of *29°-46°*, we can replace the missing incidence angles with **36.0°** (approximate average). More information on the Sentinel 1 IW mode can be found [here](https://sentinel.esa.int/web/sentinel/user-guides/sentinel-1-sar/acquisition-modes/interferometric-wide-swath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {
     "scrolled": true
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "scrolled": true
    },
