--- a/scripts/ship_detect_very_deep_learn_data.ipynb
+++ b/scripts/ship_detect_very_deep_learn_data.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Dataset for very deep learning\n",
+    "## SAR-Ship Dataset for very deep learning\n",
     "Data [here:](https://gitlab.com/sarmaps/sar-ship-dataset)\n",
     "\n",
     "Article [here:](https://sci-hub.ren/10.1109/igarss.2016.7729017)"
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,19 +31,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define path to the data\n",
     "PATH = r'C:\\Users\\arman\\Documents\\GitHub\\sar_ship_detect'\n",
-    "#data_path = join(os. getcwd(), '..','data', 'Iceberg-classifier-challenge')\n",
+    "# data_path = join(os. getcwd(), '..','data', 'very_deep_learn_data', 'json')\n",
     "data_path = join(PATH, 'data', 'very_deep_learn_data', 'json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -52,7 +52,7 @@
        "['false_positives.json', 'ship_positives.json', 'true_negatives.json']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
